[package]
name = "leds"
version = "0.1.0"
authors = ["Robin Gottfried <robin.gottfried@fragaria.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blinkt = "0.5"
color_processing = "0.4.1"
toml-loader =  "0.1.1"
serde = "1.0.104"
serde_derive = "1.0.104"
toml = "0.5.6"

[profile.release]
opt-level = "z"
lto = true  # size optiomization at linking
panic = "abort"
